@@ -10,6 +10,7 @@ public class UserNotFoundException extends NotFoundException {
     }
 
     public UserNotFoundException(Long id) {
-        this(String.format("User with ID=%d was not found", id));
+        this("Użytkownik o ID=%s nie został odnaleziony".formatted(id));
     }
+
 }
